--- a/Sign-Up.html
+++ b/Sign-Up.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Soundwave</title>
+    <title>Soundwave Sign-Up</title>
     <link rel="stylesheet" href="assets/css/sign-up.css">
 </head>
 <body>
@@ -18,5 +18,44 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <div class="container">
+            <div class="left">
+                <P>Join the <SPan>fun.</SPan></P>
+            </div>
+            <div class="right">
+                <form action="#" class="form">
+                    <div class="form-sign-up">
+                        <label for="name">Name:</label>
+                        <input type="text" name="username" id="name">
+                    </div>
+                    <div class="form-sign-up">
+                        <label for="email">Email:</label>
+                        <input type="email" name="useremail" id="email">
+                    </div>
+                    <div class="form-sign-up">
+                        <label for="password">Password:</label>
+                        <input type="password" name="userpassword" id="password">
+                    </div>
+                    <button class="button">Join Now</button>
+                </form>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <div class="footer-container">
+            <div>
+                About us
+                Contact
+            </div>
+            <div>
+                <img src="assets/images/twitter.png" alt="">
+                Twitter
+                <img src="assets/images/facebook.png" alt="">
+                Facebook
+            </div>
+        </div>
+       
+    </footer>
 </body>
 </html>
