--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Soundwave</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
      <header>
@@ -16,12 +17,13 @@
                     <li><a href="feature.html">Discover</a></li>
                     <li><a href="Sign-Up.html">Join</a></li>
                 </ul>
+                
             </nav>
-    </header>
+        </header>
     <main>
         <div class="container">
             <div class="left">
-                <img src="assets/images/picturegirl.png" alt="">
+                <img src="assets/images/image-left.png" alt="image left">
             </div>
             <div class="right">
                 <h1>Feel The Music</h1>
@@ -29,9 +31,6 @@
                 <button class="join-now">Join Now</button>
             </div>
         </div>
-        <div class="circle-1"></div>
-        <div class="circle-2"></div>
-        <div class="circle-3"></div>
     </main> 
   
 </body>
