--- a/feature.html
+++ b/feature.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Soundwave</title>
+    <title>Soundwave Feature</title>
     <link rel="stylesheet" href="assets/css/feture.Css">
 </head>
 <body>
@@ -18,29 +18,29 @@
             </ul>
         </nav>
     </header>
+
     <main>
         <div class="container">
-            <div class="right">
+            <div class="left">
                 <h1>Discover new music</h1>
                 <div class="icons">
                     <div class="icon">
-                        <img src="assets/images/charts.svg" alt="charts icon">
-                        <p></p>
+                        <img src="assets/images/charts.png" alt="charts icon">
+                        <p>Charts</p>
                     </div>
                     <div class="icon">
-                        <img src="assets/images/albums.svg" alt="albums icon">
-                        <p></p>
+                        <img src="assets/images/Albums.png" alt="albums icon">
+                        <p>Albums</p>
                     </div>
                     <div class="icon">
-                        <img src="assets/images/more.svg" alt="more icon">
-                        <p></p>
+                        <img src="assets/images/more.png" alt="more icon">
+                        <p>More</p>
                     </div>
                 </div>
                 <p>By joing you can benefit by listenening to the latest albums released</p>
-                <button class="join-now">Join Now</button>
             </div>
-            <div class="left">
-                <img src="assets/images/covers.jpg" alt="">
+            <div class="right">
+                <img src="assets/images/covers.png" alt="covers image">
             </div>
         </div>
     </main>
